--- a/section/buildRewardFlows/chooseReward.mdx
+++ b/section/buildRewardFlows/chooseReward.mdx
@@ -4,12 +4,12 @@ description: 'Convert shoppers with targeted, gated rewards.'
 icon: 'hand-holding-heart'
 ---
 
-gocertify centralises reward management, simplifying how you tailor and distribute them to your brand and your audience. The key reward types are:
+Gocertify centralises reward management, simplifying how you tailor and distribute them to your brand and your audience. The key reward types are:
 
 - [Discounts](/section/buildRewardFlows/discounts) - unique or multi-use codes for monetary (£) and percentage off (%)
 - [Gift Cards](/section/buildRewardFlows/giftCards) - delivered digitally after qualifying purchases
 - [Gated Content](/section/buildRewardFlows/gatedContent) - Exclusive access to a discounted pricing storefront or premium content
 
 <Tip>
-  You can link your preferred reward playform (i.e. Uniqodo) to your gocertify account for an automated reward feed or simply upload a CSV file of your existing offers.
+  You can link your preferred reward playform (i.e. Uniqodo) to your Gocertify account for an automated reward feed or simply upload a CSV file of your existing offers.
 </Tip>
