--- a/section/buildRewardFlows/discounts.mdx
+++ b/section/buildRewardFlows/discounts.mdx
@@ -21,8 +21,8 @@ preferred ecommerce platform or promotion service.
 </Accordion>
 <Accordion title="Integrating with Shopify" icon="shopify">
     <Steps>
-        <Step title="Install gocertify Shopify app">
-        Install the [gocertify Shopify app](/section/gettingStarted/integrateOnSite#shopify) by requesting a link from your gocertify account manager.
+        <Step title="Install Gocertify Shopify app">
+        Install the [Gocertify Shopify app](/section/gettingStarted/integrateOnSite#shopify) by requesting a link from your Gocertify account manager.
         </Step>
         <Step title="Create a discount">
             Create a discount in Shopify and name it using the following convention: `GC-campaignSlug-discountPercentage`, i.e. `GC-keyWorkers-20` for a 20% discount targeted at key workers. 
