--- a/section/buildRewardFlows/fullClosedUserGroups.mdx
+++ b/section/buildRewardFlows/fullClosedUserGroups.mdx
@@ -4,36 +4,36 @@ description: 'Convert shoppers with targeted, gated rewards.'
 icon: 'person'
 ---
 
-gocertify enables you to target your campaigns to any combination of our 40+ supported closed groups. We handle the verification process for you end-to-end. 
+Gocertify enables you to target your campaigns to any combination of our 40+ supported closed groups. We handle the verification process for you end-to-end. 
 
 ## How it works
-gocertify's AI powered verification process verifies shoppers quickly, accurately and securely by automatically analysing "verification proof" in the form of:
+Gocertify's AI powered verification process verifies shoppers quickly, accurately and securely by automatically analysing "verification proof" in the form of:
 
 <AccordionGroup>
   <Accordion title="Email Ownership" icon="envelope">
     Many closed groups can be identified by their email address domain. For example, many healthcare workers have an email ending in `nhs.uk`. 
     
-    If a shopper verifies using email, gocertify validates that the domain matches the group criteria and sends the shopper a verification code to prove ownership of that email address.
+    If a shopper verifies using email, Gocertify validates that the domain matches the group criteria and sends the shopper a verification code to prove ownership of that email address.
   </Accordion>
   <Accordion title="Document Upload" icon="passport">
   Shoppers can verify their identity by uploading a document, for example a work ID, passport, driving licence or payslip, that can then be analysed 
-  using gocertify's AI technology. 
+  using Gocertify's AI technology. 
   
-  gocertify does not share the document with the brand or store 
+  Gocertify does not share the document with the brand or store 
   the shopper is shopping with, but does let the brand know which category of discount the shopper verified for (e.g. student or NHS). If the shopper 
-  is verifying special category data (i.e. that they are pregnant, or that they have donated blood) gocertify will ask the shopper for their explicit consent to process the document 
+  is verifying special category data (i.e. that they are pregnant, or that they have donated blood) Gocertify will ask the shopper for their explicit consent to process the document 
   and send a code.
   </Accordion>
   <Accordion title="JustGiving" icon="circle-dollar-to-slot">
-  If a shopper chooses to donate to JustGiving, gocertify will direct the shopper to the JustGiving site. JustGiving will confirm with gocertify that the 
-  shopper has made a charitable donation, and gocertify will issue the reward.
+  If a shopper chooses to donate to JustGiving, Gocertify will direct the shopper to the JustGiving site. JustGiving will confirm with Gocertify that the 
+  shopper has made a charitable donation, and Gocertify will issue the reward.
   </Accordion>
   <Accordion title="Learning Portal" icon="building-columns">
-  If a shopper verifies using their learning portal, gocertify will be notified that the status is confirmed, and gocertify will send the shopper a code.
+  If a shopper verifies using their learning portal, Gocertify will be notified that the status is confirmed, and Gocertify will send the shopper a code.
   </Accordion>
   <Accordion title="Manual Verification" icon="headset">
-  If a shopper experiences any difficulty verifying, the <Tooltip tip="Available 24 hours 7 days a week"> gocertify customer service team </Tooltip> will manually verify. For this, gocertify collects the shopper's email, 
-  mobile number, and a copy of the document they are using to verify their status. gocertify does not share the document with the brand or store the shopper is 
+  If a shopper experiences any difficulty verifying, the <Tooltip tip="Available 24 hours 7 days a week"> Gocertify customer service team </Tooltip> will manually verify. For this, Gocertify collects the shopper's email, 
+  mobile number, and a copy of the document they are using to verify their status. Gocertify does not share the document with the brand or store the shopper is 
   shopping with, but does let the brand know which category of discount the shopper verified for (e.g. student or NHS).
   </Accordion>
 </AccordionGroup>
@@ -42,7 +42,7 @@ gocertify's AI powered verification process verifies shoppers quickly, accuratel
 
 ## Supported Groups
 
-gocertify supports 40+ closed user groups out of the box and can support additional groups on request.
+Gocertify supports 40+ closed user groups out of the box and can support additional groups on request.
 
 <AccordionGroup>
 
