--- a/section/buildRewardFlows/gatedContent.mdx
+++ b/section/buildRewardFlows/gatedContent.mdx
@@ -4,7 +4,7 @@ description: 'Convert shoppers with targeted, gated rewards.'
 icon: 'fa-fw'
 ---
 
-The gocertify magic link let's you provide secure access to private content or storefronts with the discounts pre-applied. 
+The Gocertify magic link let's you provide secure access to private content or storefronts with the discounts pre-applied. 
 
 
 To set up gated content, provide your technical team with a link to this [documentation](/section/buildRewardFlows/gatedContentTechDocumentation).
