--- a/section/buildRewardFlows/giftCards.mdx
+++ b/section/buildRewardFlows/giftCards.mdx
@@ -9,7 +9,7 @@ icon: 'fa-fw'
 </Tip>
 
 Gift cards are a powerful way of both converting shoppers and encouraging repeat purchases. Once a shopper has verified their status, and purchased an item,
-gocertify will issue a gift card via SMS automatically once the transaction is approved by your network.
+Gocertify will issue a gift card via SMS automatically once the transaction is approved by your network.
 
 You will need to issue e-gift card codes in your network (or through your own system). They can be in the form of a unique code or a unique URL.
 
@@ -23,13 +23,13 @@ From a shopper's perspective, the flow is as follows:
 <Frame caption="Shopper journey for the gift card flow">
   <Steps>
     <Step title="Shopper verifies">
-      Shopper verifies their status using gocertify.
+      Shopper verifies their status using Gocertify.
     </Step>
     <Step title="Qualifying purchase made">
       Shopper purchases an item, which is tracked through your affiliate network.
     </Step>
     <Step title="First notification">
-      Once gocertify receives the transaction from the Affiliate Network (typically within 24 hours), we will send a notification to the shopper.
+      Once Gocertify receives the transaction from the Affiliate Network (typically within 24 hours), we will send a notification to the shopper.
     </Step>
     <Step title="Gift Card Issued">
       Once the transaction is approved by the Affiliate Network (typically 60 days after the purchase), we will issue the gift card to the shopper.
@@ -39,7 +39,7 @@ From a shopper's perspective, the flow is as follows:
 
 ## Configuring the flow
 
-Each campaign at gocertify can have a specific flow configured, setting some rules for the gift card assignment:
+Each campaign at Gocertify can have a specific flow configured, setting some rules for the gift card assignment:
 
 - **Purchase amount**: The minimum purchase amount that qualifies for a gift card.
 - **Commission amount**: A value (or range) for the commission amount that qualifies for a gift card.
