--- a/section/captureData/CDPintegrationOverview.mdx
+++ b/section/captureData/CDPintegrationOverview.mdx
@@ -5,7 +5,7 @@ icon: 'bolt-lightning'
 ---
 
 The data collected from  will be synced to your dashboard, where you can download the data in CSV format.
-gocertify also supports a direct integration with the following platforms, enabling you to real-time sync data to your CDP/CRM and action it straight away.
+Gocertify also supports a direct integration with the following platforms, enabling you to real-time sync data to your CDP/CRM and action it straight away.
 
 
 <CardGroup cols={2}>
