--- a/section/captureData/bloomreach.mdx
+++ b/section/captureData/bloomreach.mdx
@@ -4,7 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
-Once the user submits their email and/or mobile number, gocertify will send this data to the customer's Bloomreach account, in the form of a “Custom Event” (named “gocertify”). Bloomreach is intelligent enough to either create a new Customer (if the email/phone number is new) or use an existing Customer (if the email/phone number is already in your platform). 
+Once the user submits their email and/or mobile number, Gocertify will send this data to the customer's Bloomreach account, in the form of a “Custom Event” (named “gocertify”). Bloomreach is intelligent enough to either create a new Customer (if the email/phone number is new) or use an existing Customer (if the email/phone number is already in your platform). 
 
 After that screen, when the user successfully verifies as a target group (student, healthcare, senior, etc) a second “Custom Event” (named “gocertify” as well) will be triggered, including the details of the verification.
 
@@ -12,7 +12,7 @@ With this data, you will be able to generate segments based on these events.
 
 ## Requirements to go live
 
-To start syncing data you'll need to create a new API user and share the details with your gocertify account manager.
+To start syncing data you'll need to create a new API user and share the details with your Gocertify account manager.
 
 <Accordion title="See step by step tutorial">
   <Steps>
@@ -34,7 +34,7 @@ To start syncing data you'll need to create a new API user and share the details
       <img className="block" src="/images/bloomreachNewApiGroup.png" alt="Bloomreach New API Group" style={{ borderRadius: '0.5rem' }} />
     </Step>
 
-    <Step title="Create the gocertify group">
+    <Step title="Create the Gocertify group">
       In the popup, choose “Private access” and name the group “gocertify” and click on “Create group”. You'll be given a secret key, which you'll need to note down for later.
 
       <img className="block" src="/images/bloomreachApiGroup.png" alt="Bloomreach API Group" style={{ borderRadius: '0.5rem' }} />
@@ -60,8 +60,8 @@ To start syncing data you'll need to create a new API user and share the details
       <img className="block" src="/images/bloomreachHardID.png" alt="Bloomreach Hard ID" style={{ borderRadius: '0.5rem' }} />
     </Step>
 
-    <Step title="Share the user details with gocertify">
-      Go to onetimesecret.com and paste the credentials there, in this format. Even if it's not required, we encourage you to also add a random “Passphrase”. This will generate a secret link that will expire within 7 days and will be visible only once. Once done, share this link with your Customer Success Manager at gocertify.
+    <Step title="Share the user details with Gocertify">
+      Go to onetimesecret.com and paste the credentials there, in this format. Even if it's not required, we encourage you to also add a random “Passphrase”. This will generate a secret link that will expire within 7 days and will be visible only once. Once done, share this link with your Customer Success Manager at Gocertify.
 
       <img className="block" src="/images/bloomreachOneTimeSecret.png" alt="Onetime Secret" style={{ borderRadius: '0.5rem' }} />
 
