--- a/section/captureData/csvExport.mdx
+++ b/section/captureData/csvExport.mdx
@@ -4,7 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'file-csv'
 ---
 
-Once the user submits their email and/or mobile number, gocertify saves the data within a secure and encrypted database. You can access these contacts [within your dashboard](https://secure.gocertify.me/dashboard) and export contacts to a CSV.
+Once the user submits their email and/or mobile number, Growocertify saves the data within a secure and encrypted database. You can access these contacts [within your dashboard](https://secure.gocertify.me/dashboard) and export contacts to a CSV.
 
 <Frame caption="Access your CSV data within your dashboard">
 <img
