--- a/section/captureData/customFields.mdx
+++ b/section/captureData/customFields.mdx
@@ -16,7 +16,7 @@ any additional data you require to personalise the shopping experience and retar
 
 ## Custom Field Types
 
-To ensure your data is standardised and easy to use, gocertify supports a range of custom field types. These can be mapped to your own data fields in your CRM.
+To ensure your data is standardised and easy to use, Gocertify supports a range of custom field types. These can be mapped to your own data fields in your CRM.
 
 ### Text
 Let users input free text; useful for collecting names, postcodes or other unstructured information.
