--- a/section/captureData/klaviyo.mdx
+++ b/section/captureData/klaviyo.mdx
@@ -4,7 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
-When a shopper submits their email and/or mobile number, gocertify will send this data to the your Klaviyo account in the form of a gocertify event. This is represented by a “Profile” (either augmenting an existing one or creating a new one).
+When a shopper submits their email and/or mobile number, Gocertify will send this data to the your Klaviyo account in the form of a Gocertify event. This is represented by a “Profile” (either augmenting an existing one or creating a new one).
 As the shopper goes on to successfully verify as a target group (student, healthcare, senior, etc) another “Event” will be triggered, with the label “verified as __”. 
 
 With this data, you will be able to generate segments based on these events.
@@ -17,7 +17,7 @@ In order to go live with Klaviyo, we will need the following:
 - Main Klaviyo lists for Email and SMS
 
 ### Share Private Klaviyo API Key
-Please share a Private Klaviyo API Key must be generated and provided to the gocertify team. [See here how to generate one](https://help.klaviyo.com/hc/en-us/articles/7423954176283#before-you-begin1).
+Please share a Private Klaviyo API Key must be generated and provided to the Gocertify team. [See here how to generate one](https://help.klaviyo.com/hc/en-us/articles/7423954176283#before-you-begin1).
 
 This API Key must be a “Custom” one, giving “Full Access” to Events, List, Profiles and Subscriptions, as shown here.
 
@@ -46,7 +46,7 @@ If you don't have a main list for each of these, we'll need a list for both chan
 
 ## How data will appear in Klaviyo
 
-First gocertify will send the shopper's data to Klaviyo as a Profile. Within both verification and standard offers the profile will be subscribed to Email and/or SMS marketing.
+First Gocertify will send the shopper's data to Klaviyo as a Profile. Within both verification and standard offers the profile will be subscribed to Email and/or SMS marketing.
 
 <img
   className="block dark:hidden"
