--- a/section/captureData/ometria.mdx
+++ b/section/captureData/ometria.mdx
@@ -4,16 +4,16 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
 
-Once the user submits their email and/or mobile number, gocertify will send this data to the customer's Ometria account, and will create a Customer, subscribed to Email and/or SMS (according to the setup with gocertify). 
+Once the user submits their email and/or mobile number, Gocertify will send this data to the customer's Ometria account, and will create a Customer, subscribed to Email and/or SMS (according to the setup with gocertify). 
 
 After that screen, when the user successfully verifies as a target group (student, healthcare, senior, etc) a “Custom Event” (named “gocertify”) will be triggered, including the details of the verification.
 
 With this data, you will be able to generate segments based on these events.
 
-**See also:** [Ometria's gocertify launch guide +](https://support.ometria.com/hc/en-gb/articles/15582974493853-Setting-up-a-gocertify-integration)
+**See also:** [Ometria's Gocertify launch guide +](https://support.ometria.com/hc/en-gb/articles/15582974493853-Setting-up-a-gocertify-integration)
 
 ## Requirements to go live
-To set up Ometria you will need to share your Ometria API key with the gocertify team.
+To set up Ometria you will need to share your Ometria API key with the Gocertify team.
 
 
 <Accordion title="Show step by step tutorial">
@@ -71,7 +71,7 @@ To set up Ometria you will need to share your Ometria API key with the gocertify
 
 </Step>
 
-<Step title="Share with gocertify">
+<Step title="Share with Gocertify">
     Go to onetimesecret.com and paste the new generated API key there. Even if it's not required, we encourage you to also add a random “Passphrase”. This will generate a secret link that will expire within 7 days and will be visible only once.
     Share this link with your Customer Success Manager, and we will enable your integration.
     <img
@@ -99,7 +99,7 @@ To set up Ometria you will need to share your Ometria API key with the gocertify
 Before you are able to see this information in your Ometria account, you will need to ask your Customer Success (at Ometria) to setup this Custom Event. Note that this can take up to 1 week.
 Once set up, the data will appear in your Ometria account as a Custom Event, with the name “gocertify”:
 
-```JSON Example of a gocertify event in Ometria
+```JSON Example of a Gocertify event in Ometria
     [{
         "@type": "custom_event",
         event_type: "gocertify",
