--- a/section/captureData/overview.mdx
+++ b/section/captureData/overview.mdx
@@ -3,7 +3,7 @@ title: Overview
 description: 'Start building loyal communities with targeted, gated offers.'
 ---
 
-DataCapture is a core feature of gocertify that allows you to collect valuable data from shoppers in exchange for rewards. With over 80% of shoppers willing to exchange data in return for promotions and 
+DataCapture is a core feature of Gocertify that allows you to collect valuable data from shoppers in exchange for rewards. With over 80% of shoppers willing to exchange data in return for promotions and 
 this data is a powerful asset for your brand - enabling you to:
 
 - **Retarget** shoppers who have already visited your site
@@ -27,5 +27,5 @@ DataCapture is enabled at the brand level with the ability to apply DataCapture 
 Once switched on shoppers will experience an additional step in the reward flow where they can opt-in to share their data in return for rewards. This screen will
 appear after login but before verification.
 
-To learn more about how gocertify keeps your sensitve data safe please review our [GDPR documentation](https://gocertify.notion.site/GDPR-at-gocertify-700bbc00a8174bfcbaa6ad9ecb0eb4a7), [privacy policy](https://secure.gocertify.me/privacy) and [T&Cs](https://www.gocertify.me/terms).
+To learn more about how Gocertify keeps your sensitve data safe please review our [GDPR documentation](https://gocertify.notion.site/GDPR-at-gocertify-700bbc00a8174bfcbaa6ad9ecb0eb4a7), [privacy policy](https://secure.gocertify.me/privacy) and [T&Cs](https://www.gocertify.me/terms).
 
