--- a/section/captureData/webhooksZapier.mdx
+++ b/section/captureData/webhooksZapier.mdx
@@ -4,7 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'share-from-square'
 ---
 
-gocertify offers a webhook integration that allows you to connect with other services, including automations tools like [Zapier](https://zapier.com/), [Make](https://www.make.com/) and [Tray](https://tray.io/). 
+Gocertify offers a webhook integration that allows you to connect with other services, including automations tools like [Zapier](https://zapier.com/), [Make](https://www.make.com/) and [Tray](https://tray.io/). 
 This can be used to trigger automated actions each time a shopper is verified or claims an offer.
 
 To go live simply provide the endpoint to the partners@gocertify.me - this endpoint will usually [be generated](https://help.zapier.com/hc/en-us/articles/8496083355661-How-to-get-started-with-Webhooks-by-Zapier) by your iPaaS (Make.com, Zapier, Tray, etc) or by your IT team.
