--- a/section/gettingStarted/customiseBranding.mdx
+++ b/section/gettingStarted/customiseBranding.mdx
@@ -28,9 +28,9 @@ create will be applied to all of your reward flows, so it's a great way to build
 
 #### Favicon, Logo and Banner Image
 The brand logo and banner image is shown on the key screens throughout the reward flow and the favicon is shown on any 
-[gocertify hosted](https://secure.gocertify.me/at/gosnow) landing pages that you may link to. 
+[Gocertify hosted](https://secure.gocertify.me/at/gosnow) landing pages that you may link to. 
 
-Provide your gocertify account manager with the image files of the correct dimensions (listed below), and we will handle the rest.
+Provide your Gocertify account manager with the image files of the correct dimensions (listed below), and we will handle the rest.
 
 <Frame caption = "Ideal dimensions for your favicon are 36 x 36 px">
 <img
