--- a/section/gettingStarted/landingPages.mdx
+++ b/section/gettingStarted/landingPages.mdx
@@ -8,7 +8,7 @@ import OfferHubIntegrationSteps from '/snippets/offerHub-integration-steps.mdx';
 import LandingPageSteps from '/snippets/landing-page-integration-steps.mdx';
 
 
-Landing pages are a powerful tool for converting key communities and boosting your SEO. To get the most out of the gocertify experience we recommend you: 
+Landing pages are a powerful tool for converting key communities and boosting your SEO. To get the most out of the Gocertify experience we recommend you: 
 
 
   * **Create a landing page** for each of your high value campaigns (i.e. 20% off for Students) 
