--- a/section/gettingStarted/overview.mdx
+++ b/section/gettingStarted/overview.mdx
@@ -15,10 +15,10 @@ description: 'Convert shoppers with targeted, gated rewards.'
   alt="Hero Dark"
   style={{ borderRadius: '0.5rem' }}
 />
-## Why use gocertify?
+## Why use Gocertify?
 Every year brands spend $1 trn attracting shoppers on-site - but 97\% of shoppers leave without making a purchase and \<4\% share the data needed for retargeting.
 
-Today over 450 brands, from Puma to Samsung, use gocertify to convert these shoppers using targeted, gated rewards. By deploying
+Today over 450 brands, from Puma to Samsung, use Gocertify to convert these shoppers using targeted, gated rewards. By deploying
 these rewards at scale you can boost conversion and retention while giving back to key communities. 
 
 <Frame>
@@ -26,16 +26,16 @@ these rewards at scale you can boost conversion and retention while giving back 
 </Frame>
 
 ## Introducing Reward Flows
-Think of a gocertify reward flow as the journey that your shoppers go on, from the moment they first learn about a reward on-site to the moment they redeem it.  
+Think of a Gocertify reward flow as the journey that your shoppers go on, from the moment they first learn about a reward on-site to the moment they redeem it.  
 
-With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, creating a campaign around [unique rewards](/section/buildRewardFlows/chooseReward) (e.g. discounts or gift cards), gating offers to specific [target
+With Gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, creating a campaign around [unique rewards](/section/buildRewardFlows/chooseReward) (e.g. discounts or gift cards), gating offers to specific [target
 audiences](/section/buildRewardFlows/closedUserGroups) (e.g. key workers or students), and leveraging our [DataCapture](/section/captureData/overview) features to collect valuable first party data (i.e. Email or D.O.B).
 
 
 <img src="/images/gocertifyFlow.png" alt="gocertify flow" />
 
 ## How to use this guide
-This guide is designed to help you get started with gocertify. We'll walk you through the process of creating a reward flow, from start to finish. Each key step in the process is laid out as a section within the left hand sidebar, if you're on mobile click the menu icon in the top left to view.
+This guide is designed to help you get started with Gocertify. We'll walk you through the process of creating a reward flow, from start to finish. Each key step in the process is laid out as a section within the left hand sidebar, if you're on mobile click the menu icon in the top left to view.
 
-Remember, if you get stuck at any point please reach out to your helpful customer success manager! They are always happy to help and a wealth of knowledge on how to get the most out of gocertify.
+Remember, if you get stuck at any point please reach out to your helpful customer success manager! They are always happy to help and a wealth of knowledge on how to get the most out of Gocertify.
 
