--- a/section/gettingStarted/quickStart.mdx
+++ b/section/gettingStarted/quickStart.mdx
@@ -20,17 +20,17 @@ import LightweightScript from '/snippets/lightweight-script.mdx';
 
 ## Integration steps
 
-Integrate gocertify by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight</Tooltip> [script](integrateOnSite) to the `<head>` of your site ([no developer needed](https://www.loom.com/share/c71c832b378e4e17b6aa80a6bcc284a7?sid=9604726f-f6e8-4997-bf66-9a11773773d2)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform (supported by your helpful gocertify account manager).
+Integrate Gocertify by adding our <Tooltip tip="Our script is just 12kb and optimised for performance">lightweight</Tooltip> [script](integrateOnSite) to the `<head>` of your site ([no developer needed](https://www.loom.com/share/c71c832b378e4e17b6aa80a6bcc284a7?sid=9604726f-f6e8-4997-bf66-9a11773773d2)). This enables you to launch your offers within minutes and have full control over the shopper experience through our self-serve platform (supported by your helpful Gocertify account manager).
 
 In addition to adding the head script, we recommend also building dedicated [landing pages](landingPages) for your highest value campaigns to maximise performance.
 
 <CardGroup cols={2}>
   <Card
-    title="Add gocertify script"
+    title="Add Gocertify script"
     icon="pen-to-square"
     href="integrateOnSite"
   >
-    Implement the gocertify experience on-site without a developer (~2 mins).
+    Implement the Gocertify experience on-site without a developer (~2 mins).
   </Card>
   <Card
     title="Set up landing pages"
