--- a/section/promoteOffers/inStore.mdx
+++ b/section/promoteOffers/inStore.mdx
@@ -4,7 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'shop'
 ---
 
-gocertify unlocks true omni-channel customer engagement with in-store rewards.
+Gocertify unlocks true omni-channel customer engagement with in-store rewards.
 
 In-store claiming can be done by:
 
@@ -12,7 +12,7 @@ In-store claiming can be done by:
 - Flashing coupon to show to till person
 - QR code scanned at till
 
-To enable in-store claiming talk to your gocertify account manager.
+To enable in-store claiming talk to your Gocertify account manager.
 
 
 <Frame caption="..">
