--- a/section/promoteOffers/inlinePlacementOSM.mdx
+++ b/section/promoteOffers/inlinePlacementOSM.mdx
@@ -13,8 +13,8 @@ Inline placements are a powerful way to drive conversions by surfacing offers di
 </CardGroup>
 
 ## How to enable inline placements
-You can one click enable inline placements on any page where you have already installed the gocertify head script (see [integrate on site](/section/gettingStarted/integrateOnSite)) without the need for a developer.
-Simply log into your [gocertify dashboard](https://secure.gocertify.me/dashboard) and click on the On-Site Messaging tab.
+You can one click enable inline placements on any page where you have already installed the Gocertify head script (see [integrate on site](/section/gettingStarted/integrateOnSite)) without the need for a developer.
+Simply log into your [Gocertify dashboard](https://secure.gocertify.me/dashboard) and click on the On-Site Messaging tab.
 
 <img
   className="block dark:hidden"
@@ -34,7 +34,7 @@ Simply log into your [gocertify dashboard](https://secure.gocertify.me/dashboard
 To decide where to position your inline placement you can either add a snippet of code on-site or use a CSS anchor
 
 ### Using a CSS anchor
-To position an inline placement without a developer you can use a CSS anchor. gocertify will automatically position the placement at the bottom of the element with the matching CSS selector.
+To position an inline placement without a developer you can use a CSS anchor. Gocertify will automatically position the placement at the bottom of the element with the matching CSS selector.
 
 <Tip>
     You can set a different CSS anchor for mobile vs. desktop (breakpoint is 768px) to ensure the placement is always visible.
