--- a/section/promoteOffers/linking-to-offers.mdx
+++ b/section/promoteOffers/linking-to-offers.mdx
@@ -5,7 +5,7 @@ icon: 'link'
 ---
 
 While you can always link to your [landing pages](/section/promoteOffers/landingPages) or [OfferHub](/section/promoteOffers/offerHub) from high traffic areas of your site
-gocertify offers an even quicker solution for brands looking launch right away. For every campaign you create you can generate a link that will redirect to the campaign page hosted on the gocertify platform.
+Gocertify offers an even quicker solution for brands looking launch right away. For every campaign you create you can generate a link that will redirect to the campaign page hosted on the Gocertify platform.
 If you'd rather not redirect shoppers off-site, consider using a [popup](/section/promoteOffers/popups) instead.
 
 
