--- a/section/promoteOffers/on-site-placements.mdx
+++ b/section/promoteOffers/on-site-placements.mdx
@@ -8,7 +8,7 @@ On-site messaging (OSM) is a powerful way to drive conversions by surfacing offe
 No additional development work is needed to add OSM to your site as long as the [head script](section/gettingStarted/integrateOnSite) has already been installed.
 
 ## Types of on-site messaging
-Out of the box, gocertify supports three main types of on-site messages, but with heavy customisation available you can build a tailored placement that meets your needs.
+Out of the box, Gocertify supports three main types of on-site messages, but with heavy customisation available you can build a tailored placement that meets your needs.
 
 <CardGroup cols={3}>
   <Card title="In-line" href="/section/promoteOffers/inlinePlacementOSM" img="/images/inlinePlacementOSM.png">
@@ -24,7 +24,7 @@ Out of the box, gocertify supports three main types of on-site messages, but wit
 
 ## Managing on-site messaging
 
-You have full control of all your on-site messages via the [gocertify dashboard](https://secure.gocertify.me/dashboard), including creating new placements, editing content and setting visibility rules.
+You have full control of all your on-site messages via the [Gocertify dashboard](https://secure.gocertify.me/dashboard), including creating new placements, editing content and setting visibility rules.
 
 <Frame>
 <img
