--- a/section/promoteOffers/osmVisibility.mdx
+++ b/section/promoteOffers/osmVisibility.mdx
@@ -9,7 +9,8 @@ The OSM visibility toolkit lets you control exactly when and where your offers a
 
 <AccordionGroup>
   <Accordion title="Path" icon="link">
-    Input plain text to match the path (https://secure.gocertify.me/ `this/is/the/path`) you want to show/hide the OSM. Use regex for more complex rules.
+    Input plain text to match the path (https://secure.gocertify.me/ `this/is/the/path`) you want to show/hide the OSM. Use regex for more complex rules. If you add multiple paths
+    within one rule, the offer will be displayed if the shopper navigates to any of the paths (i.e path1 OR path2).
       <Frame>
       <img src="/images/visibility-rule-path.png" alt="Path rule" width="50%" style={{ borderRadius: '0.5rem' }} />
       </Frame>
