--- a/section/promoteOffers/overview.mdx
+++ b/section/promoteOffers/overview.mdx
@@ -3,7 +3,7 @@ title: Overview
 description: 'Start building loyal communities with targeted, gated offers.'
 ---
 
-gocertify's promotion engine provides the tools needed to surface the right offer at the right time to the right shopper:
+Gocertify's promotion engine provides the tools needed to surface the right offer at the right time to the right shopper:
 - **[On-site](/section/promoteOffers/on-site-placements) and [In-Store](/section/promoteOffers/inStore):** Deliver omnichannel performance at every shopper touchpoint
 - **[High performing Placements](/section/promoteOffers/on-site-placements):** Drive conversions with prominent on-site messaging
 - **[Dynamic CTAs](/section/promoteOffers/dynamicText):** Highlight exact savings amounts by passing through product data
