--- a/section/promoteOffers/stickyBarOSM.mdx
+++ b/section/promoteOffers/stickyBarOSM.mdx
@@ -13,8 +13,8 @@ Sticky Bar placements are a powerful way to drive conversions by surfacing offer
 </CardGroup>
 
 ## How to enable sticky bar placements
-You can one click enable sticky bar placements on any page where you have already installed the gocertify head script (see [integrate on site](/section/gettingStarted/integrateOnSite)) without the need for a developer.
-Simply log into your [gocertify dashboard](https://secure.gocertify.me/dashboard) and click on the On-Site Messaging tab.
+You can one click enable sticky bar placements on any page where you have already installed the Gocertify head script (see [integrate on site](/section/gettingStarted/integrateOnSite)) without the need for a developer.
+Simply log into your [Gocertify dashboard](https://secure.gocertify.me/dashboard) and click on the On-Site Messaging tab.
 
 
 <img
