--- a/snippets/landing-page-integration-steps.mdx
+++ b/snippets/landing-page-integration-steps.mdx
@@ -5,10 +5,10 @@
   </Step>
   <Step title="Add iFrame to body">
     <Tip>
-      Your gocertify account manager can provide you with the relevant iFrame code for each campaign.
+      Your Gocertify account manager can provide you with the relevant iFrame code for each campaign.
     </Tip>
 
-    Once you have your basic page setup you can paste in the following iFrame within the `<body>` tag. This determines where gocertify reward flow will appear.
+    Once you have your basic page setup you can paste in the following iFrame within the `<body>` tag. This determines where Gocertify reward flow will appear.
 
     ```html iFrame
       <gocertify-iframe source="example-campaign"></gocertify-iframe>
