--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -9,7 +9,7 @@ import LightweightScript from '/snippets/lightweight-script.mdx';
 
 ## Setup
 
-Integrate gocertify by adding the following gocertify <Tooltip tip="Our script is just 12kb and optimised for performance">script</Tooltip> to your site's `<head>` using either a tag manager (no developer needed) or manually pasting it in (basic HTML knowledge recommended). The setup takes less than 2 minutes!
+Integrate Gocertify by adding the following Gocertify <Tooltip tip="Our script is just 12kb and optimised for performance">script</Tooltip> to your site's `<head>` using either a tag manager (no developer needed) or manually pasting it in (basic HTML knowledge recommended). The setup takes less than 2 minutes!
 
 <Tip>
   Remember to replace `example-company` with your actual company name in the script below.
@@ -28,7 +28,7 @@ Integrate gocertify by adding the following gocertify <Tooltip tip="Our script i
       ```
 
 ### Option 1: Use tag manager (no dev required)
-Tag managers let you can easily add the gocertify script site-wide without needing a developer. Pick your prefered manager to see how it's done.
+Tag managers let you can easily add the Gocertify script site-wide without needing a developer. Pick your prefered manager to see how it's done.
 
 <AccordionGroup>
   <Accordion icon="tag" title="Google Tag Manager">
@@ -41,7 +41,7 @@ Tag managers let you can easily add the gocertify script site-wide without needi
     <Step title="Pick the Custom HTML configuration">
       Within the tag configuration, select the `Custom HTML` option.
     </Step>
-    <Step title="Paste in your gocertify script">
+    <Step title="Paste in your Gocertify script">
       Copy and paste the following script into the HTML tag. Remember to replace `example-company` with your actual company name.
 
       ```javascript gocertify-script
@@ -81,7 +81,7 @@ Tag managers let you can easily add the gocertify script site-wide without needi
         </Frame>
       </Step>
       <Step title="Activate Plugin">
-        Within the store search for the gocertify plugin and click `Activate now` and confirm your choice.
+        Within the store search for the Gocertify plugin and click `Activate now` and confirm your choice.
       </Step>
       <Step title="View your Plugins">
         Once activated the final modal will give you the option to `View My Plugins`. Select this and you will see that the plugin is activated and the script has been deployed.
@@ -93,7 +93,7 @@ Tag managers let you can easily add the gocertify script site-wide without needi
 
     <Steps>
     <Step title="Request an install link">
-        As our Shopify app is still in Beta you will need to first request an install link from your gocertify account manager.
+        As our Shopify app is still in Beta you will need to first request an install link from your Gocertify account manager.
       </Step>
       <Step title="Install the app">
         Once you have received the install link, you can install the app by clicking on the link and selecting `Install`.
@@ -102,13 +102,13 @@ Tag managers let you can easily add the gocertify script site-wide without needi
         </Frame>
       </Step>
       <Step title="Connect to your brand">
-        Once installed, you will see the app appear in your left side menu. Click on the app and you will be asked to connect to your gocertify brand by clicking `Connect`.
+        Once installed, you will see the app appear in your left side menu. Click on the app and you will be asked to connect to your Gocertify brand by clicking `Connect`.
         <Frame>
           <img src="/images/shopify/shopify-connect-screen1.png" alt="Shopify connect screen" />
         </Frame>
       </Step>
       <Step title="Select your brand">
-        You will be presented with a list of brands you have access to. Select the brand you want to connect the app to. If you cannot see your brand, please contact your gocertify account manager.
+        You will be presented with a list of brands you have access to. Select the brand you want to connect the app to. If you cannot see your brand, please contact your Gocertify account manager.
         <Frame>
           <img src="/images/shopify/shopify-connect-screen2.png" alt="Shopify connect screen" />
         </Frame>
@@ -120,7 +120,7 @@ Tag managers let you can easily add the gocertify script site-wide without needi
         </Frame>
       </Step>
       <Step title="Enable your embed script">
-        Click the toggle to enable the embed script. The gocertify head script is now enabled and added to your site.
+        Click the toggle to enable the embed script. The Gocertify head script is now enabled and added to your site.
         <Frame>
           <img src="/images/shopify/shopify-enablescript-screen2.png" alt="Shopify connect screen" />
         </Frame>
@@ -137,7 +137,7 @@ Tag managers let you can easily add the gocertify script site-wide without needi
 
 <Accordion icon="rectangle-terminal" title="Add script to head">
 
-  Copy and paste the gocertify script into the `<head>` of your site. Remember to replace `example-company` with your actual company name.
+  Copy and paste the Gocertify script into the `<head>` of your site. Remember to replace `example-company` with your actual company name.
   ```javascript gocertify-script
         <script>
           (function() {
