--- a/section/promoteOffers/floatingButtonOSM.mdx
+++ b/section/promoteOffers/floatingButtonOSM.mdx
@@ -14,8 +14,8 @@ Floating button placements are a powerful way to drive conversions by surfacing 
 
 ## How to enable floating button placements
 
-You can one click enable floating button placements on any page where you have already installed the gocertify head script (see [integrate on site](/section/gettingStarted/integrateOnSite)) without the need for a developer.
-Simply log into your [gocertify dashboard](https://secure.gocertify.me/dashboard) and click on the On-Site Messaging tab.
+You can one click enable floating button placements on any page where you have already installed the Gocertify head script (see [integrate on site](/section/gettingStarted/integrateOnSite)) without the need for a developer.
+Simply log into your [Gocertify dashboard](https://secure.gocertify.me/dashboard) and click on the On-Site Messaging tab.
 
 <img
   className="block dark:hidden"
