--- a/snippets/offerHub-integration-steps.mdx
+++ b/snippets/offerHub-integration-steps.mdx
@@ -4,10 +4,10 @@
   </Step>
   <Step title="Add OfferHub iFrame to body">
     <Tip>
-      Your gocertify account manager can provide you with the relevant iFrame code for each campaign.
+      Your Gocertify account manager can provide you with the relevant iFrame code for each campaign.
     </Tip>
 
-    Once you have your basic page setup you can paste in the following iFrame within the `<body>` tag. This determines where gocertify OfferHub will appear.
+    Once you have your basic page setup you can paste in the following iFrame within the `<body>` tag. This determines where Gocertify OfferHub will appear.
 
     ```html iFrame
       <gocertify-hub></gocertify-hub>
